fixed alignment issue caused by double digit numbers

--- a/src/Styles/CoinCard.scss
+++ b/src/Styles/CoinCard.scss
@@ -27,18 +27,21 @@ $positiveGreen: rgb(91, 190, 132);
   }
 
   .rank {
-    color: white;
-    margin-right: 15px;
-    margin-left: 32px;
-    align-items: center;
-    user-select: none;
+    width: 400px;
+    height: auto;
+    &__number {
+      color: white;
+
+      margin-left: 32px;
+      align-items: center;
+      user-select: none;
+    }
   }
 }
 
 .coin-info {
   display: flex;
   width: 1000px;
-  margin-left: 15px;
   margin-right: 60px;
   cursor: pointer;
 
@@ -137,9 +140,12 @@ $positiveGreen: rgb(91, 190, 132);
   }
 }
 
-.mini-chart {
+.mini-chart-container {
   width: 100%;
   height: 65px;
   margin-left: 50px;
   margin-right: 40px;
+
+  &__chart {
+  }
 }
